turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:6: error: '(' expected but identifier found.
		if colors(i) == couleur{return i}
                   ^LangtonsAnt:7: error: illegal start of simple expression
	}
        ^LangtonsAnt:14: error: ')' expected but ';' found.
		setCouleurBrosse(colors(place(x)); baisseBrosse; leveBrosse; droite();avance()
                                                 ^LangtonsAnt:16: error: ')' expected but ';' found.
		setCouleurBrosse(colors(place(x)); baisseBrosse; leveBrosse; gauche();avance()
                                                 ^LangtonsAnt:19: error: ')' expected but '}' found.
}
^